[package]
name = "vectoreyes"
authors = ["Alex J. Malozemoff <amaloz@galois.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
num-traits = "0.2.15"
bytemuck = "1.12.3"
subtle = "2.4.1"

# NOTE: keep in sync with the cfg for the scalar backend in generated/implementation.rs
[target.'cfg(not(all(target_arch = "x86_64",all(target_feature = "sse2",target_feature = "avx",target_feature = "sse4.1",target_feature = "avx2",target_feature = "aes",target_feature="sse4.2",target_feature="PCLMULQDQ"))))'.dependencies]
aes = "0.8.2"
lazy_static = "1.4.0"

[dev-dependencies]
aes = "0.8.2"
proptest = "1.0.0"
lazy_static = "1.4.0"
